Fixed: Scrollbar FF and colors palette

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -96,6 +96,7 @@ body {
 
 * {
     text-decoration: none;
+    scrollbar-width: thin;
 }
 
 *:focus {
